--- a/style/style.css
+++ b/style/style.css
@@ -11,20 +11,31 @@
     align-items: center;
     flex-wrap: wrap;
 }
-header{
+body{
     width: 100%;
+    background-image: url(../img/vegan.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    /* background-position-y: -100px; */
+    /* padding-top: 110px; */
+}
+header{
+    width: 85%;
     padding: 50px;
     /* background-color: aqua; */
     justify-content: flex-end;
 }
+.burgermenu{
+    display: none;
+}
 header ul{
     width: 592px;
-    margin-right: 220px;
+    /* margin-right: 220px; */
     /* background-color: green; */
     justify-content: space-between;
 }
 header ul li a{
-    padding: 23px 26px 23px 18px; 
+    padding: 22px 26px 22px 18px; 
     /* background-color: rgb(121, 179, 49); */
     background-color: rgb(196, 196, 196);
     border-radius: 0px 35px;
@@ -34,19 +45,12 @@ header ul li a:hover{
     background-color: rgb(121, 179, 49);
     color: #ffffff;
 }
-main{
-    width: 100%;
-    background-image: url(../img/vegan.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-y: -100px;
-    padding-top: 110px;    
-}
+
 .anim{
     width: 388px;
     height: 150px;
     /* background-color: white; */
-    margin: 0px 230px 0px 710px;
+    margin: 110px 230px 0px 710px;
     padding: 52px 0px;
     position: relative;
 }
@@ -142,10 +146,227 @@ main{
     border-radius: 35px 0px;
     background-color: rgb(196, 196, 196);
 }
+.size{
+    display: none;
+}
+.num{
+    display: none;
+}
+.num2{
+    display: none;
+}
 .box:hover .fotoli{
     background-color: rgb(121, 179, 49);
+    cursor: pointer;
 }
 .box:hover .text{
     color: rgb(121, 179, 49);
-    font-weight: 700;
+    /* font-weight: 700; */
+    cursor: pointer;
+}
+@media only screen and (max-width: 1024px){
+    body{
+        width: 100%;
+        background-image: url(../img/vegan.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-x: -150px;
+        /* background-position-y: 100px; */
+        /* padding-top: 110px; */
+    }
+    header{
+        width: 100%;
+        padding: 50px;
+        /* background-color: aqua; */
+        justify-content: center;
+    }
+    .anim{
+        width: 388px;
+        height: 150px;
+        /* background-color: red; */
+        margin: 96px 194px 0px 540px;
+        /* position: absolute; */
+        /* right: 100px; */
+        padding: 52px 0px;
+        /* position: relative; */
+    }
+    .cont{
+        width: 582px;
+        height: 508px;
+        /* background-color: black; */
+        margin-top: 470px;
+        margin-right: 94px;
+        position: relative;  
+        flex-direction: row;
+
+    }
+    .ghero{
+        width: 2px;
+        height: 508px;
+        position: absolute;
+        right: 0px;
+        background-color: rgb(196, 196, 196);
+    }
+    .box{
+        width: 582px;
+        height: 82px;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    .box3, .box1{
+        display: none;
+    }
+    .fotoli{
+        width: 70px;
+        height: 70px;
+        border-radius: 0px 35px;
+        background-color: rgb(196, 196, 196);
+    }
+    .size{
+        display: block;
+        width: 582px;
+        height: 82px;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        top: 118px;
+    }
+    .size2{
+        top: 370px;
+    }
+    .size:hover .fotoli{
+        background-color: rgb(121, 179, 49);
+        cursor: pointer;
+    }
+    .size:hover .text{
+        color: rgb(121, 179, 49);
+        font-weight: 700;
+        cursor: pointer;
+    }
+    .num{
+        display: none;
+    }
+    .num2{
+        display: none;
+    }
+}
+@media only screen and (max-width: 414px){
+    body{
+        width: 100%;
+        background-image: url(../img/vegan.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-x: -400px;
+        /* background-position-y: 100px; */
+        /* padding-top: 110px; */
+    }
+    header{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: flex-end;
+        align-content: center;
+        /* background-color: aqua; */
+    }
+    header nav{
+        display: none;
+    }
+    .burgermenu{
+        display: block;
+        font-size: 25px;
+    }
+    .anim{
+        width: 320px;
+        height: 140px;
+        /* background-color: red; */
+        margin: 40px;
+        /* position: absolute; */
+        /* right: 100px; */
+        padding: 52px 0px;
+        /* position: relative; */
+    }
+    .anim h2{
+        color: black;
+        font-size: 14px;
+        /* background-color: red; */
+        text-align: center;
+        padding-bottom: 10px;
+    }
+    .time{
+        width: 340px;
+        font-size: 22px;
+        color:  black;
+        /* background-color: aqua; */
+        text-align: center;
+    }
+    @keyframes circle {
+        0%{top: 0; left: 0;}
+        25%{top: 0; left: 290px;}
+        50%{top: 108px; left: 290px;}
+        75%{top: 108px; left: 0;}
+        100%{top: 0; left: 0;}
+    }
+    .cont{
+        width: 340px;
+        height: 600px   ;
+        /* background-color: black; */
+        margin: 112px auto 0px;
+        /* position: relative;   */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        padding: 20px;
+    }
+    .box{
+        width: 314px;
+        height: 200px;
+        position: absolute; 
+        display: flex;
+        align-items: center;
+        /* justify-content: flex-end; */
+        flex-direction: column;
+        left: 50px;
+        /* background-color: blue; */
+    }
+    .text{
+        width: 314px;
+        text-align: center;
+    }
+    .ghero{
+        display: none;
+    }
+    .boxx{
+        display: none;
+    }
+    .box2{
+        display: none;
+    }
+    .size{
+        display: none;
+    }
+    .box1{
+        margin-top: 20px;
+    }
+    .num{
+        display: block;
+        margin: 20px auto;
+        text-align: center;
+    }
+    .box3{
+        margin-top: 140px;
+    }
+    .num2{
+        display: block;
+        top: 370px;
+        margin: 10px auto;
+    }
+    .num2 .fotoli{
+        margin: 0 auto;
+    }
+    .num .fotoli{
+        margin: 0 auto;
+    }
 }
